# global_resource_tool

./: BUILD.gn  CMakeLists.txt  OTA.xml  README.en.md  README.md  README_zh.md  bundle.json
include/: cmd_parser.h  config_parser.h  factory_resource_compiler.h  file_entry.h  file_manager.h  i_resource_compiler.h  id_worker.h  increment_list.h  increment_manager.h  json_compiler.h  key_manager.h  key_parser.h  module_combine.h  nocopyable_object.h  preview_manager.h  reference_parser.h  resource_data.h  resource_item.h  resource_module.h  resource_module_inc.h  resource_pack.h  resource_table.h  resource_util.h  restool_errors.h  singleton_object.h  solid_xml.h  sqlite_database.h  task_handle.h
src/: cmd_list.cpp  cmd_parser.cpp  config_parser.cpp  factory_resource_compiler.cpp  file_entry.cpp  file_manager.cpp  generic_compiler.cpp  header.cpp  i_resource_compiler.cpp  id_worker.cpp  increment_index.cpp  increment_list.cpp  increment_manager.cpp  json_compiler.cpp  key_parser.cpp  module_combine.cpp  preview_manager.cpp  reference_parser.cpp  resource_directory.cpp  resource_item.cpp  resource_merge.cpp  resource_module.cpp  resource_module_inc.cpp  resource_pack.cpp  resource_table.cpp  resource_util.cpp  restool.cpp  solid_xml_compiler.cpp  sqlite_database.cpp  task_handle.cpp
src/xml/: key_manager.cpp  solid_xml.cpp  xml_converter.cpp  xml_key_node.cpp
